[package]
name = "polkadot-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/moonbeam-foundation/substrate", branch = "grw/moon-1119-add-identity-specs" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
