[package]
name = "polkadot-primitives-test-helpers"
version = "0.9.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.26" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.26" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
