[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/moonbeam-foundation/substrate", branch = "grw/moon-1119-add-identity-specs" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/moonbeam-foundation/substrate", default-features = false , branch = "grw/moon-1119-add-identity-specs" }
sp-runtime = { git = "https://github.com/moonbeam-foundation/substrate", branch = "grw/moon-1119-add-identity-specs" }
sp-core = { git = "https://github.com/moonbeam-foundation/substrate", features = ["std"] , branch = "grw/moon-1119-add-identity-specs" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
