[package]
name = "polkadot-runtime-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-std = { package = "sp-std", git = "https://github.com/moonbeam-foundation/substrate", default-features = false, branch = "grw/moon-1119-add-identity-specs" }
sp-tracing = { git = "https://github.com/moonbeam-foundation/substrate", default-features = false , branch = "grw/moon-1119-add-identity-specs" }
parity-scale-codec = { version = "3.4.0", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
frame-benchmarking = { git = "https://github.com/moonbeam-foundation/substrate", default-features = false, optional = true , branch = "grw/moon-1119-add-identity-specs" }

bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-tracing/std",
    "parity-scale-codec/std",
    "primitives/std",
    "bs58/std"
]
runtime-metrics = ["sp-tracing/with-tracing", "frame-benchmarking"]
