[package]
name = "polkadot-voter-bags"
version = "0.9.23"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }

generate-bags = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }

westend-runtime = { path = "../../runtime/westend" }
kusama-runtime = { path = "../../runtime/kusama" }
polkadot-runtime = { path = "../../runtime/polkadot" }
