[package]
name = "polkadot-statement-distribution"
version = "0.9.23"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Statement Distribution Subsystem"
edition = "2021"

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
polkadot-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-background-sig-0.23.0" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
polkadot-node-subsystem = {path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.8.1"
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-authority-discovery = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sp-application-crypto = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sp-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sc-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "elois-background-sig-0.23.0" }
futures-timer = "3.0.2"
polkadot-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
